--- a/styles/src/main.scss
+++ b/styles/src/main.scss
@@ -1,3 +1,25 @@
 body{
-  color:#fff;
+  h2{
+    a.btn-floating {
+      font-size: 1rem;
+    }
+  }
+}
+
+
+.country {
+  .card {
+    .card-title {
+      font-weight: 600;
+    }
+
+    p {
+      font-size: 4rem;
+      font-weight: 100;
+
+      span.units {
+        font-size: 3rem;
+      }
+    }
+  }
 }
